--- a/gradle.properties
+++ b/gradle.properties
@@ -17,4 +17,4 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
-YelpApiKey = "Bearer 1e2317c5famshab4b8ea0cbca9a7p1e6f49jsneaff8c41bfc1"
+ApiKey = "1e2317c5famshab4b8ea0cbca9a7p1e6f49jsneaff8c41bfc1"
