--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,3 +70,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-database'
     implementation 'com.firebaseui:firebase-ui-database:7.1.1'
 }
+
+apply plugin: 'com.google.gms.google-services'
