created a new activity called SavedNewsListActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.NewsSearch"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".ui.SavedNewsListActivity"
+            android:exported="true" />
+        <activity
             android:name=".ui.NewsDetailActivity"
             android:exported="true" />
         <activity
