--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-database'
     implementation 'com.firebaseui:firebase-ui-database:7.1.1'
+
+//  Authentication
+    implementation 'com.google.firebase:firebase-auth'
 }
 
 apply plugin: 'com.google.gms.google-services'
